--- a/front/src/index.css
+++ b/front/src/index.css
@@ -25,7 +25,7 @@ code {
 }
 
 .search-input {
-  padding: 20px;
+  padding: 11px;
   border: none;
   border-top-left-radius: 16px;
   width: 70%; /* Ajuste conforme necessário */
@@ -36,19 +36,19 @@ code {
   background-color: rgb(237,237,237);
   border: none;
   cursor: pointer;
-  padding: 14px;
+  padding: 5px 1px 6px;
   border-radius: 0 5px 5px 0;
 }
 
 /* Estilos para o ícone de busca */
 .search-button img {
   width: 20px;
-  height: 20px;
+  height: 11px;
 }
 
 .icone{
   width: 40px;
-  height: 40px;
+  height: 11px;
 }
 
 main.MuiBox-root {
@@ -61,3 +61,4 @@ main.MuiBox-root {
 @media (min-width: 600px) {
   .css-1k69ezp-MuiDrawer-docked .MuiDrawer-paper { background-color: #003e74;}
 }
+
